--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_bottom_navigation_bar: ^1.3.0
   fl_chart: ^0.64.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
