--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.0
   fl_chart: ^0.64.0
   provider: ^6.0.5
+  floating_bottom_navigation_bar: ^1.5.2
 
 dev_dependencies:
   flutter_test:
