--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fl_chart: ^0.64.0
   provider: ^6.0.5
   floating_bottom_navigation_bar: ^1.5.2
+  sqflite: ^2.3.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
